# ROS2Hub

./: Basics of ROS.ipynb  CONTRIBUTING.md  Interface_types.ipynb  LaunchFiles.ipynb  README.md  Simulations and visualization.ipynb
.ipynb_checkpoints/: Interface_types-checkpoint.ipynb  parameters-checkpoint.ipynb
Debugging&compilingforvscode/: commands.ipynb  launch.json  tasks.json
Project1/rpm_speed_calc/install/: local_setup.sh
Project1/rpm_speed_calc/install/rpm_speed_calc/lib/rpm_speed_calc/: publishrmp
Project1/rpm_speed_calc/install/rpm_speed_calc/share/rpm_speed_calc/: package.bash
Project1/rpm_speed_calc/src/: publishrmp.cpp  subscriber.cpp
Publisher_Subscriber/rpm_speed_calc/: CMakeLists.txt
Publisher_Subscriber/rpm_speed_calc/install/: setup.sh
Publisher_Subscriber/rpm_speed_calc/install/rpm_speed_calc/lib/rpm_speed_calc/: publishspeed  subscriber
Publisher_Subscriber/rpm_speed_calc/install/rpm_speed_calc/share/rpm_speed_calc/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
Publisher_Subscriber/rpm_speed_calc/src/: publishspeed.cpp
action-service/: CMakeLists.txt
action-service/install/: local_setup.sh  setup.sh
action-service/install/firstservicepkg/include/firstservicepkg/firstservicepkg/action/: navigate.h
action-service/install/firstservicepkg/include/firstservicepkg/firstservicepkg/action/detail/: navigate__builder.hpp  navigate__functions.c  navigate__functions.h  navigate__rosidl_typesupport_fastrtps_c.h  navigate__rosidl_typesupport_introspection_c.h  navigate__struct.hpp  navigate__type_support.h
action-service/install/firstservicepkg/include/firstservicepkg/firstservicepkg/srv/: turn_camera.h
action-service/install/firstservicepkg/lib/firstservicepkg/: action_client  action_server  turn_camera_client  turn_camera_service
action-service/install/firstservicepkg/local/lib/python3.10/dist-packages/firstservicepkg/: _firstservicepkg_s.ep.rosidl_typesupport_fastrtps_c.c
action-service/install/firstservicepkg/share/ament_index/resource_index/package_run_dependencies/: firstservicepkg
action-service/install/firstservicepkg/share/firstservicepkg/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml
action-service/install/firstservicepkg/share/firstservicepkg/action/: Navigate.action  Navigate.idl
action-service/install/firstservicepkg/share/firstservicepkg/cmake/: export_firstservicepkg__rosidl_generator_pyExport-noconfig.cmake  export_firstservicepkg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  firstservicepkg__rosidl_typesupport_cExport.cmake  firstservicepkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake
action-service/src/: action_client.cpp  action_server.cpp
project2/firstservicepkg/src/: turn_camera_client.cpp  turn_camera_service.cpp
project2/install/firstservicepkg/include/firstservicepkg/firstservicepkg/srv/: camera_angle.hpp
project2/install/firstservicepkg/lib/firstservicepkg/: turn_camera_client  turn_camera_service
project2/install/firstservicepkg/share/firstservicepkg/: local_setup.sh  package.dsv  package.xml  package.zsh
project2/install/firstservicepkg/share/firstservicepkg/cmake/: export_firstservicepkg__rosidl_generator_cppExport.cmake  firstservicepkg__rosidl_typesupport_cppExport.cmake  firstservicepkg__rosidl_typesupport_introspection_cExport.cmake
project2/install/firstservicepkg/share/firstservicepkg/srv/: CameraAngle.srv  CameraAngle_Response.msg
publisher/: CMakeLists.txt  compileROSNODE.ipynb  package.xml  subscriber.cpp
services/firstservicepkg/: CMakeLists.txt
services/install/: local_setup.sh  setup.sh
services/install/firstservicepkg/include/firstservicepkg/firstservicepkg/srv/: turn_camera.hpp
services/install/firstservicepkg/share/firstservicepkg/: package.sh
services/install/firstservicepkg/share/firstservicepkg/cmake/: export_firstservicepkg__rosidl_generator_cExport.cmake  export_firstservicepkg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  firstservicepkgConfig.cmake  firstservicepkg__rosidl_typesupport_cExport-noconfig.cmake
services/install/firstservicepkg/share/firstservicepkg/srv/: CameraAngle.idl
(+19 files in other folders)
